SUBDIRS = rng

INCLUDES = -I@top_srcdir@/

pkginclude_HEADERS = \
	algorithm.h \
	datablock.h \
	defs.h \
	distributions.h \
	error.h \
	ide.h \
	la.h \
	lapack.h \
	matrix.h \
	matrix_bidirectional_iterator.h \
	matrix_forward_iterator.h \
	matrix_random_access_iterator.h \
	optimize.h \
	rng.h \
	smath.h \
	stat.h
